<resources>
    <string name="app_name">SchoolHub</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="nav_home">Home</string>
    <string name="nav_help_feedback">Help &amp; Feedback</string>
    <string name="nav_account">My Account</string>
    <string name="nav_sign_out">Sign Out</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_schools">School Workspace</string>
    <string name="nav_courses">Courses</string>
    <string name="app_desc">Simplifying Learning for Africa</string>
    <string name="sign_in">Sign In</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="or">Or</string>
    <string name="sign_up">Sign Up</string>
    <string name="loading">Loading</string>
    <string name="taking_longer_than_expected">Taking longer than expected…</string>
    <string name="signing_up">Signing up</string>
    <string name="full_name">Full Name</string>
    <string name="signing_in">Signing In</string>
    <string name="nav_profile">Profile</string>
    <string name="student">Student</string>
    <string name="role_student">Student</string>
    <string name="role_lecturer">Lecturer</string>
    <string name="role_manager">School Manager</string>
    <string name="nav_lecturers">Lecturers</string>
    <string name="nav_students">Students</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_lecturer_students">My Students</string>
    <string name="nav_student_classroom">My Classroom</string>
    <string name="nav_lecturer_classroom">My Classrooms</string>
    <string name="nav_classrooms">Classrooms</string>
    <string name="add_lecturer">Add lecturer</string>
    <string name="nav_add_lecturer">Add a lecturer</string>
    <string name="gender">Gender</string>
    <string name="phone_number">Phone Number</string>
    <string name="nav_lectures">Lectures</string>
    <string name="delete_profile_photo">Delete profile photo</string>
    <string name="confirm_profile_deletion">Are you sure to delete your profile photo ?</string>
    <string name="delete">Delete</string>
    <string name="please_wait">Please, wait a moment</string>
    <string name="cancel">Cancel</string>
    <string name="profile_avatar">Profile Photo</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="names">Full Name</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="updating_user_account">Updating user account</string>
    <string name="abort_operation">Abort Operation</string>
    <string name="confirm_abort">You are about to abort the user creation process.\nAre you sure to continue ?</string>
    <string name="abort">Abort</string>
    <string name="unsuccessful_update">Update failed</string>
    <string name="unsuccessful_creation">Failed to create user</string>
    <string name="copy_password">Get user login password</string>
    <string name="password_copy_instructions">Copy the user password generated below for user further login.\n\n %1$s</string>
    <string name="ok">OK</string>
    <string name="creating_user_account">Creating user account</string>
    <string name="fill_input">Fill Input</string>
    <string name="user_info_successful_update">Successfully updated user info</string>
    <string name="delete_user">Delete User</string>
    <string name="user_successful_deletion">Successfully deleted user</string>
    <string name="user_unsuccessful_deletion">Failed to delete user</string>
    <string name="confirm_deletion">Confirm Deletion</string>
    <string name="warn_delete">Are you sure to delete this user ?</string>
    <string name="yes">Yes</string>
    <string name="deleting_user">Deleting user</string>
    <string name="school_classrooms">School Classrooms</string>
    <string name="add_classroom">Add classroom</string>
    <string name="classroom_students_count">(%1$d) students</string>
    <string name="lecturer_name">Pick a lecturer</string>
    <string name="classroom_name">Classroom name</string>
    <string name="pick_lecturer">Pick a lecturer</string>
    <string name="close">Close</string>
    <string name="update_classroom">Update Classroom</string>
    <string name="classroom_manager">Current Manager : %1$s</string>
    <string name="apply">Apply</string>
    <string name="available_lecturers">Available lecturers</string>
</resources>