<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@+id/nav_lecturers">


    <fragment
        android:id="@+id/nav_lecturers"
        android:name="com.mobileedu34.schoolhub.ui.fragments.LecturersFragment"
        android:label="@string/nav_lecturers"
        tools:layout="@layout/fragment_lecturers" >
        <action
            android:id="@+id/action_nav_lecturers_to_add_user_fragment"
            app:destination="@id/add_user_fragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_students"
        android:name="com.mobileedu34.schoolhub.ui.fragments.StudentsFragment"
        android:label="@string/nav_students"
        tools:layout="@layout/fragment_students" >
        <action
            android:id="@+id/action_nav_students_to_add_user_fragment"
            app:destination="@id/add_user_fragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.mobileedu34.schoolhub.ui.fragments.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_account"
        android:name="com.mobileedu34.schoolhub.ui.fragments.ProfileFragment"
        android:label="@string/nav_account"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_help_feedback"
        android:name="com.mobileedu34.schoolhub.ui.fragments.HelpFragment"
        android:label="@string/nav_help_feedback"
        tools:layout="@layout/fragment_help" />
    <fragment
        android:id="@+id/nav_student_lectures"
        android:name="com.mobileedu34.schoolhub.ui.fragments.StudentLecturesFragment"
        android:label="@string/nav_lectures"
        tools:layout="@layout/fragment_classroom" />
    <fragment
        android:id="@+id/nav_lecturer_students"
        android:name="com.mobileedu34.schoolhub.ui.fragments.LecturerStudentsFragment"
        android:label="@string/nav_lecturer_students"
        tools:layout="@layout/fragment_lecturer_students" />
    <fragment
        android:id="@+id/nav_lecturer_classroom"
        android:name="com.mobileedu34.schoolhub.ui.fragments.LecturerClassroomsFragment"
        android:label="@string/nav_lecturer_classroom"
        tools:layout="@layout/fragment_lecturer_classrooms" />
    <fragment
        android:id="@+id/nav_classrooms"
        android:name="com.mobileedu34.schoolhub.ui.fragments.ClassroomsFragment"
        android:label="@string/nav_classrooms"
        tools:layout="@layout/fragment_classrooms" />
    <fragment
        android:id="@+id/add_user_fragment"
        android:name="com.mobileedu34.schoolhub.ui.fragments.AddUserFragment"
        android:label=""
        tools:layout="@layout/fragment_add_user" >
        <action
            android:id="@+id/action_add_user_fragment_to_nav_lecturers"
            app:destination="@id/nav_lecturers"
            app:popUpTo="@id/add_user_fragment"
            app:popUpToInclusive="true"
            app:launchSingleTop="true" />
        <action
            android:id="@+id/action_add_user_fragment_to_nav_students"
            app:destination="@id/nav_students"
            app:popUpTo="@id/add_user_fragment"
            app:popUpToInclusive="true"
            app:launchSingleTop="true" />
    </fragment>
    <fragment
        android:id="@+id/course_detail_fragment"
        android:name="com.mobileedu34.schoolhub.ui.fragments.CourseDetailFragment"
        android:label="fragment_course_detail"
        tools:layout="@layout/fragment_course_detail" />
    <fragment
        android:id="@+id/nav_lecturer_lectures"
        android:name="com.mobileedu34.schoolhub.ui.fragments.LecturerLecturesFragment"
        android:label="@string/nav_lectures"
        tools:layout="@layout/fragment_lecturer_lectures" />
</navigation>