<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:theme="@style/DialogTheme"
    android:background="@color/sh_white"
    android:layout_height="wrap_content">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:padding="12dp"
        android:gravity="center"
        android:text="@string/add_classroom"
        android:layout_marginBottom="15dp"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textSize="20sp"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/pick_lecturer"
        android:layout_width="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/title"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp"
        android:layout_height="wrap_content"
        android:text="@string/pick_lecturer"
        style="?android:buttonBarPositiveButtonStyle" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_below="@+id/pick_lecturer"
        app:boxBackgroundColor="@color/sh_grey300"
        app:boxStrokeColor="@color/darker_blue"
        android:textColorHint="@color/dark_gray"
        app:startIconTint="@color/dark_gray"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:id="@+id/classroom_name"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:startIconDrawable="@drawable/ic_label_dark_24"
        android:layout_height="wrap_content"
        app:helperTextTextColor="@color/sh_red"
        app:helperTextEnabled="true"
        android:hint="@string/classroom_name">

        <com.google.android.material.textfield.TextInputEditText
            android:fontFamily="@font/productsansregular"
            android:textColor="@color/dark_gray"
            android:layout_width="match_parent"
            android:id="@+id/edt_classroom_name"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout android:layout_below="@+id/classroom_name" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="end|center_vertical" android:layout_marginEnd="10dp" style="?android:buttonBarStyle" android:layout_marginBottom="5dp">
        <com.google.android.material.button.MaterialButton android:id="@id/cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" style="?android:buttonBarNegativeButtonStyle" />
        <com.google.android.material.button.MaterialButton android:id="@id/save" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/save" style="?android:buttonBarPositiveButtonStyle" />
    </LinearLayout>

</RelativeLayout>